# simplified-chinese-police

./: LICENSE  README.md  action.yml  dictionary.json  main.py  pyproject.toml  requirements.txt
modules/: __init__.py  languageABC.py  php.py  python.py  swift.py
tests/: php_test.py  python_test.py  swift_test.py
tests/code/: .comment-ignore  test.php  test.py  test.swift
