[tool.poetry]
name = "github-action-test"
version = "0.1.0"
description = ""
authors = ["ThanatosDi <yykkold55tw@gmail.com>"]
readme = "README.md"
packages = [{include = "github_action_test"}]

[tool.poetry.dependencies]
python = "^3.10"
alive-progress = "^3.1.4"
zhconv = "^1.4.3"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
