[tool.poetry]
name = "simplified-chinese-police"
version = "0.1.0"
description = ""
authors = ["ThanatosDi <yykkold55tw@gmail.com>"]
readme = "README.md"
packages = [{include = "simplified-chinese-police"}]

[tool.poetry.dependencies]
python = "^3.10"
alive-progress = "^3.1.4"
zhconv = "^1.4.3"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
